--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           retention-days: 1
       - uses: marvinpinto/action-automatic-releases@latest
         with:
-          repo_token: "${{ secrets.YOUR-GITHUB-TOKEN }}"
+          repo_token: "${{ secrets.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 }}"
           automatic_release_tag: "${{ github.run_number }}"
           title: "Automated Build ${{ github.run_number }}"
           prerelease: true
